# datascience_recruitement_test

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python.yml
data/edp/: README.md  gen_edp_dataset.py
