[project]
name = "recruitment_data_science"
version = "0.1.0"
description = "Data scientist recruitment test"
readme = "README.md"
license = "WTFPL"
authors = [
    { name = "Jonathan Tremesaygues", email = "jonathan.tremesaygues@sereema.com" },
]
requires-python = ">=3.13"
dependencies = ["marimo>=0.11.19", "pandas>=2.2.3", "plotly>=6.0.0"]

[dependency-groups]
dev = ["openpyxl>=3.1.5", "requests>=2.32.3", "tqdm>=4.67.1"]
