[project]
name = "recruitment_data_science"
version = "0.1.0"
description = "Data scientist recruitment test"
readme = "README.md"
license = { file = "COPYING" }
authors = [
    { name = "Jonathan Tremesaygues", email = "jonathan.tremesaygues@sereema.com" },
]
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.11.21",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.24.0",
    "scipy>=1.15.2",
]
[dependency-groups]
dev = ["openpyxl>=3.1.5", "requests>=2.32.3", "tqdm>=4.67.1"]

[tool.setuptools]
py-modules = []
